--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL8Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     show-sql: true
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/hotel_paris_blue_db?createDatabaseIfNotExist=true&serverTimezone=UTC
